5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3989/executions/1635_869.log
== TEST (2019-04-08 13:00:14) 
-- CODE:
precosemdesc = float(input("Digite o valor da compra"))
desconto = 0,05 * precosemdesc

if (precosemdes >=200):
	print(round(desconto, 2))
else:
	print(round(precosemdesc, 2)

-- ERROR:
File "XXXX", line 2
    desconto = 0,05 * precosemdesc
                  ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:00:26) 
-- CODE:
precosemdesc = float(input("Digite o valor da compra"))
desconto = 0,05 * precosemdesc
if (precosemdes >=200):
	print(round(desconto, 2))
else:
	print(round(precosemdesc, 2)

-- ERROR:
File "XXXX", line 2
    desconto = 0,05 * precosemdesc
                  ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:00:36) 
-- CODE:
precosemdesc = float(input("Digite o valor da compra"))
desconto = 0,05 * precosemdesc
if (precosemdes >=200):
	print(round(desconto, 2))
else:
	print(round(precosemdesc, 2)

-- ERROR:
File "XXXX", line 2
    desconto = 0,05 * precosemdesc
                  ^
SyntaxError: invalid token
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:01:22) 
-- CODE:
precosemdesc = float(input("Digite o valor da compra"))
desconto = 5/100 
if (precosemdes >=200):
	print(round(desconto, 2))
else:
	print(round(precosemdesc, 2)

-- ERROR:
File "XXXX", line 7
    
                                 ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:01:34) 
-- CODE:
precosemdesc = float(input("Digite o valor da compra"))
desconto = 5/100 
if (precosemdes >=200):
	print(round(desconto, 2))
else:
	print(round(precosemdesc, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (precosemdes >=200):
NameError: name 'precosemdes' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:01:40) 
-- CODE:
precosemdesc = float(input("Digite o valor da compra:"))
desconto = 5/100 
if (precosemdes >=200):
	print(round(desconto, 2))
else:
	print(round(precosemdesc, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (precosemdes >=200):
NameError: name 'precosemdes' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 13:01:43) 
-- CODE:
precosemdesc = float(input("Digite o valor da compra:"))
desconto = 5/100 
if (precosemdes >=200):
	print(round(desconto, 2))
else:
	print(round(precosemdesc, 2))
-- EXECUTION TIME:
0.12806
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/869/main.py", line 3, in <module>
    if (precosemdes >=200):
NameError: name 'precosemdes' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:01:45) 
-- CODE:
precosemdesc = float(input("Digite o valor da compra:"))
desconto = 5/100 
if (precosemdes >=200):
	print(round(desconto, 2))
else:
	print(round(precosemdesc, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (precosemdes >=200):
NameError: name 'precosemdes' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 13:01:58) 
-- CODE:
precosemdesc = float(input("Digite o valor da compra:"))
desconto = 5/100 
if (precosemdesc >=200):
	print(round(desconto, 2))
else:
	print(round(precosemdesc, 2))
-- EXECUTION TIME:
0.165313
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
0.05
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
0.05
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:02:01) 
-- CODE:
precosemdesc = float(input("Digite o valor da compra:"))
desconto = 5/100 
if (precosemdesc >=200):
	print(round(desconto, 2))
else:
	print(round(precosemdesc, 2))
-- OUTPUT:
0.05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:02:15) 
-- CODE:
precosemdesc = float(input("Digite o valor da compra:"))
desconto = 5/100 
if (precosemdesc >=200):
	print(round(desconto, 2))
else:
	print(round(precosemdesc, 2))
-- OUTPUT:
0.05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 13:02:17) 
-- CODE:
precosemdesc = float(input("Digite o valor da compra:"))
desconto = 5/100 
if (precosemdesc >=200):
	print(round(desconto, 2))
else:
	print(round(precosemdesc, 2))
-- EXECUTION TIME:
0.226822
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
0.05
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
0.05
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:02:20) 
-- CODE:
precosemdesc = float(input("Digite o valor da compra:"))
desconto = 5/100 
if (precosemdesc >=200):
	print(round(desconto, 2))
else:
	print(round(precosemdesc, 2))
-- OUTPUT:
0.05
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:05:07) 
-- CODE:
precosemdesc = float(input("Digite o valor da compra:"))
desconto = 5/100 
if (precosemdesc >=200):
	print(round(desconto * precosemdes, 2))
else:
	print(round(precosemdesc, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(desconto * precosemdes, 2))
NameError: name 'precosemdes' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:12:04) 
-- CODE:
precosemdesc = float(input("Digite o valor da compra:"))
desconto = 5/100 
if (precosemdesc >=200):
	precocomdesc = precosemdesc - *(precosemdesc * desconto)
	print(round(desconto * precosemdes, 2))
else:
	print(round(precosemdesc, 2))
-- ERROR:
File "XXXX", line 4
    precocomdesc = precosemdesc - *(precosemdesc * desconto)
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:12:11) 
-- CODE:
precosemdesc = float(input("Digite o valor da compra:"))
desconto = 5/100 
if (precosemdesc >=200):
	precocomdesc = precosemdesc - (precosemdesc * desconto)
	print(round(desconto * precosemdes, 2))
else:
	print(round(precosemdesc, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(desconto * precosemdes, 2))
NameError: name 'precosemdes' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:12:25) 
-- CODE:
precosemdesc = float(input("Digite o valor da compra:"))
desconto = 5/100 
if (precosemdesc >=200):
	precocomdesc = precosemdesc - (precosemdesc * desconto)
	print(round(desconto * precosemdesc, 2))
else:
	print(round(precosemdesc, 2))
-- OUTPUT:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:13:18) 
-- CODE:
precosemdesc = float(input("Digite o valor da compra:"))
desconto = 5/100 
if (precosemdesc >=200):
	precocomdesc = precosemdesc - (precosemdesc * desconto)
	print(round(desconto * precocomdesc, 2))
else:
	print(round(precosemdesc, 2))
-- OUTPUT:
9.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:13:18) 
-- CODE:
precosemdesc = float(input("Digite o valor da compra:"))
desconto = 5/100 
if (precosemdesc >=200):
	precocomdesc = precosemdesc - (precosemdesc * desconto)
	print(round(desconto * precocomdesc, 2))
else:
	print(round(precosemdesc, 2))
-- OUTPUT:
9.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:14:45) 
-- CODE:
psd = float(input("Digite o valor da compra:"))
d = 5/100 
if (psd >=200):
	pcd = psd - (psd * d)
	print(round(d * pcd, 2))
else:
	print(round(psd, 2))
-- OUTPUT:
9.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:15:17) 
-- CODE:
psd = float(input(" psd: "))
d = 5 / 100 
if (psd >= 200):
	pcd = psd - (psd * d)
	print(round(pcd, 2))
else:
	print(round(psd, 2))
-- OUTPUT:
190.09
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 13:15:22) 
-- CODE:
psd = float(input(" psd: "))
d = 5 / 100 
if (psd >= 200):
	pcd = psd - (psd * d)
	print(round(pcd, 2))
else:
	print(round(psd, 2))
-- EXECUTION TIME:
0.252024
-- TEST CASE 1:
---- input:
200.09
---- correct output:
190.09
---- user output:
190.09
-- TEST CASE 2:
---- input:
200.53
---- correct output:
190.5
---- user output:
190.5
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
